update limit posts in index, add excerpt

--- a/_posts/2012-05-02-rest-parte-1.md
+++ b/_posts/2012-05-02-rest-parte-1.md
@@ -1,7 +1,7 @@
 ---
 author: Sidney Lima Filho
 title: 'O que é REST - Parte 1'
-excerpt:
+excerpt: REST é uma sigla para Representational State Transfer, que em bom português significa Transferência Representacional de Estados, um padrão de arquitetura para serviços distribuidos (A Web é um bom exemplo de serviço distribuido).
 layout: post
 category:
   - Series
