Set all posts as unpublished, so I can make revision and publishing one-by-one

--- a/_posts/2011-07-11-agile-brazil-2011.md
+++ b/_posts/2011-07-11-agile-brazil-2011.md
@@ -3,8 +3,7 @@ author: Sidney Lima Filho
 title: Agile Brazil 2011
 excerpt:
 layout: post
-category:
-  - Tech
+published: false
 tags:
   - Agile
 post_format: [ ]
