--- a/_posts/2012-04-08-webware.md
+++ b/_posts/2012-04-08-webware.md
@@ -3,8 +3,7 @@ author: Sidney Lima Filho
 title: O que é webware?
 excerpt:
 layout: post
-category:
-  - Tech
+published: false
 tags:
   - Carreira
   - Conceito
