--- a/_posts/2012-05-02-rest-parte-1.md
+++ b/_posts/2012-05-02-rest-parte-1.md
@@ -6,6 +6,8 @@ title: 'O que é REST - Parte 1'
 image: /files/2012-05-02-rest-parte-1-StateMachineWF.jpg
 excerpt: REST é uma sigla para Representational State Transfer, que em bom português significa Transferência Representacional de Estados, um padrão de arquitetura para serviços distribuidos (A Web é um bom exemplo de serviço distribuido).
 
+published: true
+
 tags:
   - Arquitetura
   - Conceito
