Fix accent bug unicode

--- a/_posts/2011-07-11-agile-brazil-2011.md
+++ b/_posts/2011-07-11-agile-brazil-2011.md
@@ -8,30 +8,30 @@ tags:
   - Agile
 post_format: [ ]
 ---
-#### O que Ã© Agile Brasil?
+#### O que é Agile Brasil?
 
-O maior evento sobre metodologias Ã¡geis no Brasil. Simples assim. Mas e daÃ­? Para que eu preciso saber de metodologias Ã¡geis? VocÃª deve estar se perguntando. O processo de escrever cÃ³digo nÃ£o Ã© igual ao processo de desenvolver software e em minha opiniÃ£o, desenvolver software Ã© uma das profissÃµes mais difÃ­ceis do planeta Terra.
+O maior evento sobre metodologias ágeis no Brasil. Simples assim. Mas e daí? Para que eu preciso saber de metodologias ágeis? Você deve estar se perguntando. O processo de escrever código não é igual ao processo de desenvolver software e em minha opinião, desenvolver software é uma das profissões mais difíceis do planeta Terra.
 
-Desenvolver software contempla fases que nÃ£o se restringem a apenas escrever cÃ³digo, mas tambÃ©m contempla a comunicaÃ§Ã£o, o entendimento, capacidade de abstraÃ§Ã£o, gestÃ£o de incertezas, avaliaÃ§Ã£o de pressupostos, alÃ©m de o conhecimento integrado de muitas linguagens e caracterÃ­sticas tecnolÃ³gicas distintas.
+Desenvolver software contempla fases que não se restringem a apenas escrever código, mas também contempla a comunicação, o entendimento, capacidade de abstração, gestão de incertezas, avaliação de pressupostos, além de o conhecimento integrado de muitas linguagens e características tecnológicas distintas.
 
-O Agile Brasil ocorre uma vez por ano, sendo que em 2011 foi sua 3Âª ediÃ§Ã£o, as anteriores foram: 2009 â€“ Rio de Janeiro; 2010 â€“ Porto Alegre e 2011 â€“ Fortaleza. Sendo uma das maiores que jÃ¡ ocorreu e com a promessa de no ano que vem ser o maior evento sobre metodologias Ã¡geis de todo o hemisfÃ©rio Sul. A cidade escolhida? SÃ£o Paulo.
+O Agile Brasil ocorre uma vez por ano, sendo que em 2011 foi sua 3ª edição, as anteriores foram: 2009 €“ Rio de Janeiro; 2010 €“ Porto Alegre e 2011 €“ Fortaleza. Sendo uma das maiores que já ocorreu e com a promessa de no ano que vem ser o maior evento sobre metodologias ágeis de todo o hemisfério Sul. A cidade escolhida? São Paulo.
 
 #### Como foi o Agile Brasil?
 
-Na chegada imediatamente fomos para o hotel, deixamos as malas e partimos para o evento, era umas 16:00 e dava para assistir 10 palestras em 5 salas simultÃ¢neas, ou seja ainda dava para escolher 2 palestras para assistir.
+Na chegada imediatamente fomos para o hotel, deixamos as malas e partimos para o evento, era umas 16:00 e dava para assistir 10 palestras em 5 salas simultneas, ou seja ainda dava para escolher 2 palestras para assistir.
 
-O evento foiÂ realizado na Fabrica de negÃ³cios que fica anexo do Hotel Praia Centro, na Av Monsenhor Tabora, extremamente bem localizado.
+O evento foi realizado na Fabrica de negócios que fica anexo do Hotel Praia Centro, na Av Monsenhor Tabora, extremamente bem localizado.
 
-Chegando ao evento imediatamente me surpreendi com sua organizaÃ§Ã£o e qualidade, tudo de qualidade muito boa, alÃ©m de que nos stands dos patrocinadores, que geralmente tem gente de vendas ou RH buscando â€œrecursosâ€, havia muitas pessoas que eram da Ã¡rea entÃ£o alÃ©m de conhecer melhor cada empresa, ainda permitia entender melhor como cada empresa trabalhava, como empregava metodologias Ã¡geis, suas experiÃªncias e suas qualidades.
+Chegando ao evento imediatamente me surpreendi com sua organização e qualidade, tudo de qualidade muito boa, além de que nos stands dos patrocinadores, que geralmente tem gente de vendas ou RH buscando €œrecursos€, havia muitas pessoas que eram da área então além de conhecer melhor cada empresa, ainda permitia entender melhor como cada empresa trabalhava, como empregava metodologias ágeis, suas experiências e suas qualidades.
 
-O evento era uma semana inteira de 2Âª a 6Âª, porÃ©m as palestras comeÃ§avam 4Âª com o keynote de Jim Highsmith da ThoughtWorks, na 5Âª teve o keynote  
-do Joshua Kerievsky e 6Âª foi o keynote do Vinicius Teles.
+O evento era uma semana inteira de 2ª a 6ª, porém as palestras começavam 4ª com o keynote de Jim Highsmith da ThoughtWorks, na 5ª teve o keynote  
+do Joshua Kerievsky e 6ª foi o keynote do Vinicius Teles.
 
-Como sÃ³ consegui chegar na 5Âª de tarde tive que rapidamente me atualizar com os poucos conhecidos sobre o que tinha rolado nos dias anteriores.
+Como só consegui chegar na 5ª de tarde tive que rapidamente me atualizar com os poucos conhecidos sobre o que tinha rolado nos dias anteriores.
 
 #### Palestras que assisti
 
-Quando cheguei ao andar das palestras de cara vi um Open Space com umas 40 pessoas discutindo sobre Lean Startup, os conceitos Lean e caracterÃ­sticas que levam um empreendedor a falhar, principalmente na Ã¡rea de software onde todo programador acha que pode tornar seu programinha em produto. O open space foi marcante por conhecer pessoalmente o Juan BernabÃ³ e sua histÃ³ria, suas 8 falÃªncias e hoje uma pessoa reconhecida no movimento Ã¡gil, uma histÃ³ria de vida maravilhosa, alÃ©m de um ser humano bastante evoluÃ­do. Mas como eu nÃ£o tava lÃ¡ para isso foi para as palestras.
+Quando cheguei ao andar das palestras de cara vi um Open Space com umas 40 pessoas discutindo sobre Lean Startup, os conceitos Lean e características que levam um empreendedor a falhar, principalmente na área de software onde todo programador acha que pode tornar seu programinha em produto. O open space foi marcante por conhecer pessoalmente o Juan Bernabó e sua história, suas 8 falências e hoje uma pessoa reconhecida no movimento ágil, uma história de vida maravilhosa, além de um ser humano bastante evoluído. Mas como eu não tava lá para isso foi para as palestras.
 
 *   [**Optimizing Business Value: beyond cost, schedule and scope**][1]  
     Samuel Crescencio
@@ -39,7 +39,7 @@ Quando cheguei ao andar das palestras de cara vi um Open Space com umas 40 pesso
     Vinicius Teles
 *   [**Trabalhando de forma eficaz com mentalidade legada**][3]  
     Rodrigo Yoshima
-*   [**Ciclos de AvaliaÃ§Ã£o de Pressupostos: Entendendo Lean, Kanban e Agilidade sob uma nova perspectiva**][4]  
+*   [**Ciclos de Avaliação de Pressupostos: Entendendo Lean, Kanban e Agilidade sob uma nova perspectiva**][4]  
     Alisson Vale
 
  [1]: http://vivina.com.br/Blog-da-Vivina/Agile-Brazil-2011-Optimizing-Business-Value,497.aspx
