--- a/_posts/2012-04-08-webware.md
+++ b/_posts/2012-04-08-webware.md
@@ -1,6 +1,6 @@
 ---
 author: Sidney Lima Filho
-title: O que Ã© webware?
+title: O que é webware?
 excerpt:
 layout: post
 published: false
@@ -9,42 +9,42 @@ tags:
   - Conceito
 post_format: [ ]
 ---
-#### Primeiro, o que Ã© webware?
+#### Primeiro, o que é webware?
 
-Webware sÃ£o softwares/aplicaÃ§Ãµes baseadas na internet, nÃ£o hÃ¡ CD de instalaÃ§Ã£o, Ã© utilizado como um serviÃ§o, geralmente vocÃª faz um cadastro e jÃ¡ comeÃ§a a usar o custo nÃ£o Ã© por licenÃ§a, mas pela manutenÃ§Ã£o dos servidores, base de dados, backup e etc. Se vocÃª jÃ¡ usou algum serviÃ§o como banco na internet, e-mail, Orkut, entÃ£o usou um webware.
+Webware são softwares/aplicações baseadas na internet, não há CD de instalação, é utilizado como um serviço, geralmente você faz um cadastro e já começa a usar o custo não é por licença, mas pela manutenção dos servidores, base de dados, backup e etc. Se você já usou algum serviço como banco na internet, e-mail, Orkut, então usou um webware.
 
-#### Porque Ã© melhor para os negÃ³cios?
+#### Porque é melhor para os negócios?
 
-O que vocÃª prefere? Focar nos seus negÃ³cios ou ter dor de cabeÃ§a tentando entender tudo que se passa na empresa? NinguÃ©m conhece melhor seus negÃ³cios do que vocÃª, logo cuide de delegar tarefas para quem realmente entende do assunto e foque em ser cada vez melhor e inovador no seu negÃ³cio.
+O que você prefere? Focar nos seus negócios ou ter dor de cabeça tentando entender tudo que se passa na empresa? Ninguém conhece melhor seus negócios do que você, logo cuide de delegar tarefas para quem realmente entende do assunto e foque em ser cada vez melhor e inovador no seu negócio.
 
-O mundo Ã© de quem Ã© o melhor, nÃ£o deixe sua empresa virar um pato, pato Ã© a empresa que anda, nada e voa, mas anda mal, nada mal e voa mal.
+O mundo é de quem é o melhor, não deixe sua empresa virar um pato, pato é a empresa que anda, nada e voa, mas anda mal, nada mal e voa mal.
 
 #### Ã‰ seguro?
 
-Mais do que vocÃª imagina, pois num software normal todos os dados ficam geralmente num servidor dentro da empresa, seus arquivos confidenciais estÃ£o em pastas normalmente desprotegidas, alÃ©m de que vocÃªÂ nÃ£o tem noÃ§Ã£o se estÃ¡ protegido ou nÃ£o.
+Mais do que você imagina, pois num software normal todos os dados ficam geralmente num servidor dentro da empresa, seus arquivos confidenciais estão em pastas normalmente desprotegidas, além de que você não tem noção se está protegido ou não.
 
-Numa rede local normalmente vocÃª estÃ¡ inseguro por todos os lados, vÃ­rus, USB, roubo de documentos. Finalmente vocÃª pode se livrar disso tudo, nada de configuraÃ§Ãµes avanÃ§adas super especializadas, vÃ­rus, nenhum de cara de informÃ¡tica que te enrolando, vocÃª sÃ³ precisa de um acesso a internet.
+Numa rede local normalmente você está inseguro por todos os lados, vírus, USB, roubo de documentos. Finalmente você pode se livrar disso tudo, nada de configurações avançadas super especializadas, vírus, nenhum de cara de informática que te enrolando, você só precisa de um acesso a internet.
 
 #### Preciso fazer algum curso?
 
-Definitivamente nÃ£o, software que precisa de curso contÃ©m funcionalidades que vocÃª provavelmente nÃ£o usarÃ¡. ConstruÃ­mos software para pessoas voltadas a resultado, se esse Ã© seu caso nossos webwares sÃ£o para vocÃª.
+Definitivamente não, software que precisa de curso contém funcionalidades que você provavelmente não usará. Construímos software para pessoas voltadas a resultado, se esse é seu caso nossos webwares são para você.
 
-#### VocÃªs tambÃ©m usam?
+#### Vocês também usam?
 
-Claro que sim, acreditamos que na â€œcasa de ferreiro o espeto NUNCA pode ser de pauâ€. Usamos nossos webwares no dia-a-dia e vemos a necessidade diÃ¡ria de cada cliente como nossa necessidade.Â **Guardamos nossos dados confidenciais nos mesmos servidores que nossos clientes.**
+Claro que sim, acreditamos que na €œcasa de ferreiro o espeto NUNCA pode ser de pau€. Usamos nossos webwares no dia-a-dia e vemos a necessidade diária de cada cliente como nossa necessidade. **Guardamos nossos dados confidenciais nos mesmos servidores que nossos clientes.**
 
-#### Tudo disponÃ­vel num sÃ³ lugar
+#### Tudo disponível num só lugar
 
-NÃ£o se preocupe mais com backup, instalaÃ§Ã£o, download, implantaÃ§Ã£o, pois com acesso a internet sua empresa fica sempre a um click de distancia, um sÃ³ lugar para controlar, um sÃ³ lugar para entrar, um sÃ³ lugar para dirigir suas aÃ§Ãµes.
+Não se preocupe mais com backup, instalação, download, implantação, pois com acesso a internet sua empresa fica sempre a um click de distancia, um só lugar para controlar, um só lugar para entrar, um só lugar para dirigir suas ações.
 
-Sem versÃµes interminÃ¡veis, nenhum dado corrompido, sem migraÃ§Ã£o de sistemas, sem burocracias, tudo conectado e interligado, sem sistemas separados.Â **VocÃª pode ficar despreocupado caso aconteÃ§a algo de errado na sua maquina, pois tudo estÃ¡ num sÃ³ lugar.**
+Sem versões intermináveis, nenhum dado corrompido, sem migração de sistemas, sem burocracias, tudo conectado e interligado, sem sistemas separados. **Você pode ficar despreocupado caso aconteça algo de errado na sua maquina, pois tudo está num só lugar.**
 
-#### Sem instalaÃ§Ã£o e sem download
+#### Sem instalação e sem download
 
-A Ãºnica coisa necessÃ¡ria Ã© um navegador (Internet Explorer, Firefox, Chrome), tudo jÃ¡ pronto, funcionando, sem configuraÃ§Ãµes interminÃ¡veis, sem manuais infinitos. Com os nossos webwares nÃ£o hÃ¡ nada mais para instalar.
+A única coisa necessária é um navegador (Internet Explorer, Firefox, Chrome), tudo já pronto, funcionando, sem configurações intermináveis, sem manuais infinitos. Com os nossos webwares não há nada mais para instalar.
 
 #### Trabalhe em qualquer lugar
 
-Quando vocÃª usa nossos webwares sua empresaÂ estÃ¡ disponÃ­vel em qualquer lugar. Na casa, no trabalho, no hotel, na rua, no shopping, na casa da sogra (atÃ© nisso te ajudamos!), no cliente, basta ter internet.
+Quando você usa nossos webwares sua empresa está disponível em qualquer lugar. Na casa, no trabalho, no hotel, na rua, no shopping, na casa da sogra (até nisso te ajudamos!), no cliente, basta ter internet.
 
-Agora que vocÃª sabe o que Ã©, ainda vai continuar a usar programinha em Access ou aquela tela preta sÃ³ porque nunca deu problema?
+Agora que você sabe o que é, ainda vai continuar a usar programinha em Access ou aquela tela preta só porque nunca deu problema?
