--- a/_posts/2012-05-02-rest-parte-1.md
+++ b/_posts/2012-05-02-rest-parte-1.md
@@ -1,17 +1,14 @@
 ---
 layout: post
 
-author: Sidney Lima Filho
+author: 'Sidney Lima Filho'
 title: 'O que é REST - Parte 1'
-image: /files/2012-05-02-rest-parte-1-StateMachineWF.jpg
-excerpt: REST é uma sigla para Representational State Transfer, que em bom português significa Transferência Representacional de Estados, um padrão de arquitetura para serviços distribuidos (A Web é um bom exemplo de serviço distribuido).
+image: '/files/2012-05-02-rest-parte-1-StateMachineWF.jpg'
+excerpt: 'REST é uma sigla para Representational State Transfer, que em bom português significa Transferência Representacional de Estados, um padrão de arquitetura para serviços distribuidos (A Web é um bom exemplo de serviço distribuido).'
 
 published: true
 categories: 'post'
-tags:
-  - Arquitetura
-  - Conceito
-  - REST
+tags: [Arquitetura, REST]
 
 ---
 
