fix markdown header

--- a/_posts/2013-01-12-rest-parte-1.md
+++ b/_posts/2013-01-12-rest-parte-1.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 
-title:      'O que é REST - Parte 1'
+title:      O que é REST - Parte 1
 author:     Sidney Lima Filho
 image:      /files/2012-05-02-rest-parte-1-StateMachineWF.jpg
 excerpt:    > 
